<resources>
    <string name="app_name">Columba</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_default_username">Kostya Romanov</string>
    <string name="settings_default_status">Online</string>
    <string name="settings_text_account">Your account</string>
    <string name="settings_default_number">+79131313131</string>
    <string name="settings_label_phone_number">Change Phone number</string>
    <string name="settings_default_login">Kosta Romanov</string>
    <string name="settings_label_login">User name</string>
    <string name="settings_default_bio">Tell us about yourself</string>
    <string name="settings_label_bio">Write a few words about yourself or hobbies</string>
    <string name="settings_menu_change_name">Change your Name</string>
    <string name="settings_menu_exit">Exit</string>
    <string name="cd_register_image">register_image</string>
    <string name="register_text_enter_code">Enter the code</string>
    <string name="register_text_we_sent">We have sent you an SMS with a verification code to your phone</string>
    <string name="register_hint_default_code">- - - - - -</string>
    <string name="register_title_your_phone">Your phone number</string>
    <string name="register_toast_enter_phone">Enter your phone number</string>
    <string name="register_phone_hint">------------</string>
    <string name="settings_hint_input_name">Name</string>
    <string name="settings_hint_input_surname">Surname</string>
    <string name="settings_toast_name_is_empty">The name cannot be empty, identify yourself</string>
    <string name="toast_data_update">Data updated</string>
    <string name="settings_hint_input_username">username</string>
    <string name="settings_input_bio">bio</string>
    <string name="clear_chat">Clear the chat</string>
    <string name="delete_chat">Delete Chat</string>
    <string name="create_group">Create a group</string>
    <plurals name="count_members">
        <item quantity="one">%d user</item>
        <item quantity="few">%d users</item>
        <item quantity="many">%d users</item>
        <item quantity="other">%d users</item>
    </plurals>
</resources>