<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.fragments.SettingsFragment">
    <!--field number-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_header_bloc"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

    <de.hdodenhof.circleimageview.CircleImageView

        android:id="@+id/settings_user_photo"
        android:layout_width="@dimen/settings_user_photo_width"
        android:layout_height="@dimen/settings_user_photo_height"
        android:layout_marginBottom="4dp"
        android:src="@drawable/default_photo"
        app:civ_border_width="@dimen/settings_user_photo_border"
        app:civ_circle_background_color="@color/colorAccent"
        android:layout_marginStart="@dimen/app_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/settings_full_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        tools:text="@string/settings_default_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/settings_user_photo"
        android:layout_marginStart="@dimen/app_margin"
        android:layout_marginTop="@dimen/app_small_margin"
        android:textSize="@dimen/normalText"
        app:layout_constraintStart_toEndOf="@id/settings_user_photo"/>

        <TextView
            android:id="@+id/settings_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccentDark"
            tools:text="@string/settings_default_status"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_full_name"
            android:layout_marginStart="@dimen/app_margin"
            android:textSize="@dimen/smallText"
            app:layout_constraintStart_toEndOf="@id/settings_user_photo"/>

</androidx.constraintlayout.widget.ConstraintLayout>
    
    <TextView
        android:id="@+id/settings_text_account"
        android:text="@string/settings_text_account"
        android:layout_marginStart="@dimen/app_margin"
        android:layout_marginTop="@dimen/vertical_large_margin"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:textSize="@dimen/smallText"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/settings_header_bloc"/>

    <!--field name user-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_number_phone"
        app:layout_constraintTop_toBottomOf="@id/settings_text_account"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/ripple_effect"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/settings_buttons">

        <TextView
            android:id="@+id/settings_phone_number"
            tools:text="@string/settings_default_number"
            app:layout_constraintTop_toTopOf="@id/settings_btn_change_number_phone"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/normal_text" />

        <TextView
            android:id="@+id/settings_label_phone_number"
            android:text="@string/settings_label_phone_number"
            app:layout_constraintTop_toBottomOf="@id/settings_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/small_text" />

<View
    app:layout_constraintBottom_toBottomOf="@id/settings_label_phone_number"
    style="@style/separator"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--field about user-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_username"
        app:layout_constraintTop_toBottomOf="@id/settings_btn_change_number_phone"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/ripple_effect"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/settings_buttons">

        <TextView
            android:id="@+id/settings_username"
            tools:text="@string/settings_default_login"
            app:layout_constraintTop_toTopOf="@id/settings_btn_change_username"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/normal_text" />

        <TextView
            android:id="@+id/settings_label_username"
            style="@style/small_text"
            android:layout_marginStart="15dp"
            android:text="@string/settings_label_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_username" />

        <View
            app:layout_constraintBottom_toBottomOf="@id/settings_label_username"
            style="@style/separator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_bio"
        android:background="@drawable/ripple_effect"
        app:layout_constraintTop_toBottomOf="@id/settings_btn_change_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/settings_buttons">

        <TextView
            android:id="@+id/settings_bio"
            tools:text="@string/settings_default_bio"
            app:layout_constraintTop_toTopOf="@id/settings_btn_change_bio"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/normal_text" />

        <TextView
            android:id="@+id/settings_label_bio"
            android:text="@string/settings_label_bio"
            app:layout_constraintTop_toBottomOf="@id/settings_bio"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/small_text" />

        <View
            app:layout_constraintBottom_toBottomOf="@id/settings_label_bio"
            style="@style/separator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView

        android:id="@+id/settings_change_photo"
        android:layout_width="@dimen/settings_user_photo_width"
        android:layout_height="@dimen/settings_user_photo_height"
        android:src="@drawable/photo__2_"
        app:civ_border_width="@dimen/settings_user_photo_border"
        app:civ_circle_background_color="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/settings_header_bloc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_header_bloc"
        android:layout_marginEnd="@dimen/app_margin"/>
    
</androidx.constraintlayout.widget.ConstraintLayout>







